LU-6365 obd: Eliminate hash bucket scans in lu_cache_shrink

The lu_cache_shrink slab shrinker can be too slow. Most of its time
is spent computing the number of free-able objects by calling
lu_site_stats_get for each site. lu_site_stats_get iterates over the
buckets in the site's ls_obj_hash, potentially waiting for a spinlock
on each bucket. The call to lu_site_stats_get can be eliminated by
updating an aggregated total as objects are added to and removed from
the lru list in each site's ls_obj_hash. lu_cache_shrink then just
needs to sum the totals from each site to compute the number of
objects that can be freed.

Signed-off-by: Ann Koehler <amk@cray.com>
Change-Id: I5c70dd8e8cc1fe024292076e118774d9299bf40b